# tianyi

./: .gitignore  README.md  pyproject.toml
code/: .empty_dates.txt  count_test.py  date_jc.py  date_jc_local.py  date_jc_macth.py  emotyFileCreate.py  jc_buy_goal.py  jc_buy_score.py  jc_day_asy.py  jc_handicap_bu_ts.py  jc_handicap_buy.py  jc_month_asy.py  jc_score_buy_f2.py  jc_score_ty_buy.py  jc_win_buy.py  jc_year_asy.py  jc_year_score_asy.py  match_jc.py  match_jc_local.py  match_ls.py  titan_jc_spider.py
code/新球体育/推荐结果/: 2026-05-27.json  2026-06-30.json  2026-07-01.json  2026-07-02.json  2026-07-03.json  2026-07-06.json  2026-07-07.json  2026-07-09.json  2026-07-10.json  2026-07-13.json  2026-07-14.json  2026-07-17.json  反-2026-07-17.json  反-2026-07-18.json  反-2026-07-19.json  反-2026-07-20.json  正-2026-07-18.json  正-2026-07-19.json  正-2026-07-20.json
code/新球体育/脚本/: convert_league_data.py  fetch_league_data.py  jc_titan007_parser.py  pattern_db.sqlite-shm  recommend.py  update_pattern_db.py
code/竞彩/: input.txt  ocr_helper  pending_finish_odds.txt  recommend.py  update_pattern_db.py
code/竞彩分析汇总/: 2012年.json  2013年.json  2014年.json  2015年.json  2016年.json  2017年.json  2018年.json  2019年.json  2020年.json  2021年.json  2022年.json  2023年.json  2024年.json  2025年.json
code/竞彩分析汇总/2012年/: 2012年10月.json  2012年11月.json  2012年12月.json  2012年1月.json  2012年2月.json  2012年3月.json  2012年4月.json  2012年5月.json  2012年6月.json  2012年7月.json  2012年8月.json  2012年9月.json
code/竞彩分析汇总/2013年/: 2013年10月.json  2013年11月.json  2013年12月.json  2013年1月.json  2013年2月.json  2013年3月.json  (+6 more)
(+18231 files in other folders)
