[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tianyi-sport"
version = "1.0.0"
description = "天翼体育 - 竞彩数据分析工具"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.urls]
Homepage = ""

[tool.setuptools]
packages = []
